parser/PiParser.py
# Generated from /home/fms/Daten/B-Praktika Jobs/ImperialCollege/ideal-completions-security-code/parser/Pi.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class PiParser ( Parser ):

    grammarFileName = "Pi.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'#global'", u"'//'", u"'size '", u"'new '", u"'^w'", 
                     u"'aenc('", u"'sign('", u"'pub('", u"'enc('", u"'adec('", 
                     u"'veri('", u"'{'", u"'}'", u"'_'", u"'('", u"')'", 
                     u"'<'", u"'>'", u"'||'", u"'['", u"']'", u"','", u"'STOP'", 
                     u"'Secret'", u"'Leak'", u"'.'", u"';'", u"'\n'", u"':'", 
                     u"'+'", u"'in('", u"':='", u"'='" ]

    symbolicNames = [ u"<INVALID>", u"NAME", u"PROCID", u"NUMBER", u"GLOBAL", 
                      u"DOUBLESLASH", u"SIZE", u"NEWOP", u"OMEGA", u"AENCOP", 
                      u"SIGNOP", u"PUBOP", u"ENCOP", u"ADECOP", u"VERIOP", 
                      u"CURLOP", u"CURLCL", u"UNDER", u"PAROP", u"PARCL", 
                      u"FROP", u"FRCL", u"PARA", u"BRAOP", u"BRACL", u"COMMA", 
                      u"ZERO", u"SECRET", u"LEAK", u"DOT", u"SEM", u"NEWLINE", 
                      u"COL", u"CHOICEOP", u"INOP", u"DEF", u"EQ", u"WS", 
                      u"COMMENTS" ]

    RULE_program = 0
    RULE_helpers = 1
    RULE_helper = 2
    RULE_globalnames = 3
    RULE_globalname = 4
    RULE_definitions = 5
    RULE_definition = 6
    RULE_limit = 7
    RULE_nullprocess = 8
    RULE_newnames = 9
    RULE_parallels = 10
    RULE_comp = 11
    RULE_sublimit = 12
    RULE_iterproccall = 13
    RULE_proccalldef = 14
    RULE_processcall = 15
    RULE_procid = 16
    RULE_actions = 17
    RULE_action = 18
    RULE_inputpattern = 19
    RULE_names = 20
    RULE_newname = 21
    RULE_listofargs = 22
    RULE_arguments = 23
    RULE_argument = 24
    RULE_listofvars = 25
    RULE_variables = 26
    RULE_variable = 27
    RULE_sizedvar = 28
    RULE_size = 29
    RULE_msgout = 30
    RULE_msg = 31
    RULE_basicmsg = 32
    RULE_encrymsg = 33
    RULE_aencrymsg = 34
    RULE_signmsg = 35
    RULE_pubkeymsg = 36
    RULE_pairmsg = 37
    RULE_pattern = 38
    RULE_adecpattern = 39
    RULE_veripattern = 40
    RULE_newlines = 41

    ruleNames =  [ u"program", u"helpers", u"helper", u"globalnames", u"globalname", 
                   u"definitions", u"definition", u"limit", u"nullprocess", 
                   u"newnames", u"parallels", u"comp", u"sublimit", u"iterproccall", 
                   u"proccalldef", u"processcall", u"procid", u"actions", 
                   u"action", u"inputpattern", u"names", u"newname", u"listofargs", 
                   u"arguments", u"argument", u"listofvars", u"variables", 
                   u"variable", u"sizedvar", u"size", u"msgout", u"msg", 
                   u"basicmsg", u"encrymsg", u"aencrymsg", u"signmsg", u"pubkeymsg", 
                   u"pairmsg", u"pattern", u"adecpattern", u"veripattern", 
                   u"newlines" ]

    EOF = Token.EOF
    NAME=1
    PROCID=2
    NUMBER=3
    GLOBAL=4
    DOUBLESLASH=5
    SIZE=6
    NEWOP=7
    OMEGA=8
    AENCOP=9
    SIGNOP=10
    PUBOP=11
    ENCOP=12
    ADECOP=13
    VERIOP=14
    CURLOP=15
    CURLCL=16
    UNDER=17
    PAROP=18
    PARCL=19
    FROP=20
    FRCL=21
    PARA=22
    BRAOP=23
    BRACL=24
    COMMA=25
    ZERO=26
    SECRET=27
    LEAK=28
    DOT=29
    SEM=30
    NEWLINE=31
    COL=32
    CHOICEOP=33
    INOP=34
    DEF=35
    EQ=36
    WS=37
    COMMENTS=38

    def __init__(self, input, output=sys.stdout):
        super(PiParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def definitions(self):
            return self.getTypedRuleContext(PiParser.DefinitionsContext,0)


        def helpers(self):
            return self.getTypedRuleContext(PiParser.HelpersContext,0)


        def limit(self):
            return self.getTypedRuleContext(PiParser.LimitContext,0)


        def EOF(self):
            return self.getToken(PiParser.EOF, 0)

        def globalnames(self):
            return self.getTypedRuleContext(PiParser.GlobalnamesContext,0)


        def newlines(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PiParser.NewlinesContext)
            else:
                return self.getTypedRuleContext(PiParser.NewlinesContext,i)


        def getRuleIndex(self):
            return PiParser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)




    def program(self):

        localctx = PiParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PiParser.GLOBAL:
                self.state = 84
                self.globalnames()
                self.state = 85
                self.newlines()


            self.state = 89
            self.definitions()
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 90
                self.newlines()


            self.state = 93
            self.helpers()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PiParser.NEWLINE:
                self.state = 94
                self.newlines()


            self.state = 97
            self.limit()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PiParser.NEWLINE:
                self.state = 98
                self.newlines()


            self.state = 101
            self.match(PiParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HelpersContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.HelpersContext, self).__init__(parent, invokingState)
            self.parser = parser

        def helper(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PiParser.HelperContext)
            else:
                return self.getTypedRuleContext(PiParser.HelperContext,i)


        def newlines(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PiParser.NewlinesContext)
            else:
                return self.getTypedRuleContext(PiParser.NewlinesContext,i)


        def getRuleIndex(self):
            return PiParser.RULE_helpers

        def enterRule(self, listener):
            if hasattr(listener, "enterHelpers"):
                listener.enterHelpers(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHelpers"):
                listener.exitHelpers(self)




    def helpers(self):

        localctx = PiParser.HelpersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_helpers)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 103
                    self.helper()
                    self.state = 104
                    self.newlines() 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HelperContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.HelperContext, self).__init__(parent, invokingState)
            self.parser = parser

        def procid(self):
            return self.getTypedRuleContext(PiParser.ProcidContext,0)


        def EQ(self):
            return self.getToken(PiParser.EQ, 0)

        def limit(self):
            return self.getTypedRuleContext(PiParser.LimitContext,0)


        def SEM(self):
            return self.getToken(PiParser.SEM, 0)

        def getRuleIndex(self):
            return PiParser.RULE_helper

        def enterRule(self, listener):
            if hasattr(listener, "enterHelper"):
                listener.enterHelper(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHelper"):
                listener.exitHelper(self)




    def helper(self):

        localctx = PiParser.HelperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_helper)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.procid()
            self.state = 112
            self.match(PiParser.EQ)
            self.state = 113
            self.limit()
            self.state = 114
            self.match(PiParser.SEM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalnamesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.GlobalnamesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def GLOBAL(self):
            return self.getToken(PiParser.GLOBAL, 0)

        def SEM(self):
            return self.getToken(PiParser.SEM, 0)

        def globalname(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PiParser.GlobalnameContext)
            else:
                return self.getTypedRuleContext(PiParser.GlobalnameContext,i)


        def getRuleIndex(self):
            return PiParser.RULE_globalnames

        def enterRule(self, listener):
            if hasattr(listener, "enterGlobalnames"):
                listener.enterGlobalnames(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGlobalnames"):
                listener.exitGlobalnames(self)




    def globalnames(self):

        localctx = PiParser.GlobalnamesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_globalnames)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(PiParser.GLOBAL)
            self.state = 118 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self.globalname()
                self.state = 120 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PiParser.NAME):
                    break

            self.state = 122
            self.match(PiParser.SEM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalnameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.GlobalnameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PiParser.NAME, 0)

        def getRuleIndex(self):
            return PiParser.RULE_globalname

        def enterRule(self, listener):
            if hasattr(listener, "enterGlobalname"):
                listener.enterGlobalname(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGlobalname"):
                listener.exitGlobalname(self)




    def globalname(self):

        localctx = PiParser.GlobalnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_globalname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(PiParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.DefinitionsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PiParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(PiParser.DefinitionContext,i)


        def newlines(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PiParser.NewlinesContext)
            else:
                return self.getTypedRuleContext(PiParser.NewlinesContext,i)


        def getRuleIndex(self):
            return PiParser.RULE_definitions

        def enterRule(self, listener):
            if hasattr(listener, "enterDefinitions"):
                listener.enterDefinitions(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefinitions"):
                listener.exitDefinitions(self)




    def definitions(self):

        localctx = PiParser.DefinitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_definitions)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 126
                    self.definition()
                    self.state = 127
                    self.newlines() 
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.DefinitionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def proccalldef(self):
            return self.getTypedRuleContext(PiParser.ProccalldefContext,0)


        def DEF(self):
            return self.getToken(PiParser.DEF, 0)

        def actions(self):
            return self.getTypedRuleContext(PiParser.ActionsContext,0)


        def SEM(self):
            return self.getToken(PiParser.SEM, 0)

        def getRuleIndex(self):
            return PiParser.RULE_definition

        def enterRule(self, listener):
            if hasattr(listener, "enterDefinition"):
                listener.enterDefinition(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefinition"):
                listener.exitDefinition(self)




    def definition(self):

        localctx = PiParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.proccalldef()
            self.state = 135
            self.match(PiParser.DEF)
            self.state = 136
            self.actions()
            self.state = 137
            self.match(PiParser.SEM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LimitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.LimitContext, self).__init__(parent, invokingState)
            self.parser = parser

        def nullprocess(self):
            return self.getTypedRuleContext(PiParser.NullprocessContext,0)


        def newnames(self):
            return self.getTypedRuleContext(PiParser.NewnamesContext,0)


        def PAROP(self):
            return self.getToken(PiParser.PAROP, 0)

        def parallels(self):
            return self.getTypedRuleContext(PiParser.ParallelsContext,0)


        def PARCL(self):
            return self.getToken(PiParser.PARCL, 0)

        def getRuleIndex(self):
            return PiParser.RULE_limit

        def enterRule(self, listener):
            if hasattr(listener, "enterLimit"):
                listener.enterLimit(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLimit"):
                listener.exitLimit(self)




    def limit(self):

        localctx = PiParser.LimitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_limit)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PiParser.ZERO]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.nullprocess()
                pass
            elif token in [PiParser.NEWOP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.newnames()
                self.state = 141
                self.match(PiParser.PAROP)
                self.state = 142
                self.parallels()
                self.state = 143
                self.match(PiParser.PARCL)
                pass
            elif token in [PiParser.PROCID, PiParser.PAROP, PiParser.FROP, PiParser.SECRET, PiParser.LEAK]:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.parallels()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NullprocessContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.NullprocessContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ZERO(self):
            return self.getToken(PiParser.ZERO, 0)

        def getRuleIndex(self):
            return PiParser.RULE_nullprocess

        def enterRule(self, listener):
            if hasattr(listener, "enterNullprocess"):
                listener.enterNullprocess(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNullprocess"):
                listener.exitNullprocess(self)




    def nullprocess(self):

        localctx = PiParser.NullprocessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nullprocess)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(PiParser.ZERO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NewnamesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.NewnamesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NEWOP(self):
            return self.getToken(PiParser.NEWOP, 0)

        def names(self):
            return self.getTypedRuleContext(PiParser.NamesContext,0)


        def DOT(self):
            return self.getToken(PiParser.DOT, 0)

        def getRuleIndex(self):
            return PiParser.RULE_newnames

        def enterRule(self, listener):
            if hasattr(listener, "enterNewnames"):
                listener.enterNewnames(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNewnames"):
                listener.exitNewnames(self)




    def newnames(self):

        localctx = PiParser.NewnamesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_newnames)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(PiParser.NEWOP)
            self.state = 151
            self.names()
            self.state = 152
            self.match(PiParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParallelsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.ParallelsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def comp(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PiParser.CompContext)
            else:
                return self.getTypedRuleContext(PiParser.CompContext,i)


        def PARA(self, i=None):
            if i is None:
                return self.getTokens(PiParser.PARA)
            else:
                return self.getToken(PiParser.PARA, i)

        def getRuleIndex(self):
            return PiParser.RULE_parallels

        def enterRule(self, listener):
            if hasattr(listener, "enterParallels"):
                listener.enterParallels(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParallels"):
                listener.exitParallels(self)




    def parallels(self):

        localctx = PiParser.ParallelsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parallels)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.comp()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PiParser.PARA:
                self.state = 155
                self.match(PiParser.PARA)
                self.state = 156
                self.comp()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.CompContext, self).__init__(parent, invokingState)
            self.parser = parser

        def msgout(self):
            return self.getTypedRuleContext(PiParser.MsgoutContext,0)


        def processcall(self):
            return self.getTypedRuleContext(PiParser.ProcesscallContext,0)


        def iterproccall(self):
            return self.getTypedRuleContext(PiParser.IterproccallContext,0)


        def PAROP(self):
            return self.getToken(PiParser.PAROP, 0)

        def limit(self):
            return self.getTypedRuleContext(PiParser.LimitContext,0)


        def PARCL(self):
            return self.getToken(PiParser.PARCL, 0)

        def sublimit(self):
            return self.getTypedRuleContext(PiParser.SublimitContext,0)


        def getRuleIndex(self):
            return PiParser.RULE_comp

        def enterRule(self, listener):
            if hasattr(listener, "enterComp"):
                listener.enterComp(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComp"):
                listener.exitComp(self)




    def comp(self):

        localctx = PiParser.CompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comp)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.msgout()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.processcall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self.iterproccall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 165
                self.match(PiParser.PAROP)
                self.state = 166
                self.limit()
                self.state = 167
                self.match(PiParser.PARCL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 169
                self.sublimit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SublimitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.SublimitContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PAROP(self):
            return self.getToken(PiParser.PAROP, 0)

        def limit(self):
            return self.getTypedRuleContext(PiParser.LimitContext,0)


        def PARCL(self):
            return self.getToken(PiParser.PARCL, 0)

        def OMEGA(self):
            return self.getToken(PiParser.OMEGA, 0)

        def getRuleIndex(self):
            return PiParser.RULE_sublimit

        def enterRule(self, listener):
            if hasattr(listener, "enterSublimit"):
                listener.enterSublimit(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSublimit"):
                listener.exitSublimit(self)




    def sublimit(self):

        localctx = PiParser.SublimitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_sublimit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(PiParser.PAROP)
            self.state = 173
            self.limit()
            self.state = 174
            self.match(PiParser.PARCL)
            self.state = 175
            self.match(PiParser.OMEGA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IterproccallContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.IterproccallContext, self).__init__(parent, invokingState)
            self.parser = parser

        def processcall(self):
            return self.getTypedRuleContext(PiParser.ProcesscallContext,0)


        def OMEGA(self):
            return self.getToken(PiParser.OMEGA, 0)

        def getRuleIndex(self):
            return PiParser.RULE_iterproccall

        def enterRule(self, listener):
            if hasattr(listener, "enterIterproccall"):
                listener.enterIterproccall(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIterproccall"):
                listener.exitIterproccall(self)




    def iterproccall(self):

        localctx = PiParser.IterproccallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_iterproccall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.processcall()
            self.state = 178
            self.match(PiParser.OMEGA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProccalldefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.ProccalldefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def procid(self):
            return self.getTypedRuleContext(PiParser.ProcidContext,0)


        def BRAOP(self):
            return self.getToken(PiParser.BRAOP, 0)

        def listofvars(self):
            return self.getTypedRuleContext(PiParser.ListofvarsContext,0)


        def BRACL(self):
            return self.getToken(PiParser.BRACL, 0)

        def getRuleIndex(self):
            return PiParser.RULE_proccalldef

        def enterRule(self, listener):
            if hasattr(listener, "enterProccalldef"):
                listener.enterProccalldef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProccalldef"):
                listener.exitProccalldef(self)




    def proccalldef(self):

        localctx = PiParser.ProccalldefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_proccalldef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.procid()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PiParser.BRAOP:
                self.state = 181
                self.match(PiParser.BRAOP)
                self.state = 182
                self.listofvars()
                self.state = 183
                self.match(PiParser.BRACL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcesscallContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.ProcesscallContext, self).__init__(parent, invokingState)
            self.parser = parser

        def procid(self):
            return self.getTypedRuleContext(PiParser.ProcidContext,0)


        def BRAOP(self):
            return self.getToken(PiParser.BRAOP, 0)

        def listofargs(self):
            return self.getTypedRuleContext(PiParser.ListofargsContext,0)


        def BRACL(self):
            return self.getToken(PiParser.BRACL, 0)

        def getRuleIndex(self):
            return PiParser.RULE_processcall

        def enterRule(self, listener):
            if hasattr(listener, "enterProcesscall"):
                listener.enterProcesscall(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProcesscall"):
                listener.exitProcesscall(self)




    def processcall(self):

        localctx = PiParser.ProcesscallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_processcall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.procid()
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PiParser.BRAOP:
                self.state = 188
                self.match(PiParser.BRAOP)
                self.state = 189
                self.listofargs()
                self.state = 190
                self.match(PiParser.BRACL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcidContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PiParser.ProcidContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PROCID(self):
            return self.getToken(PiParser.PROCID, 0)

        def SECRET(self):
            return self.getToken(PiParser.SECRET, 0)

        def LEAK(self):
            return self.getToken(PiParser.LEAK, 0)

        def getRuleIndex(self):
            return PiParser.RULE_procid

        def enterRule(self, listener):
            if hasattr(listener, "enterProcid"):
                listener.enterProcid(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProcid"):
                listener.exitProcid(self)




    def procid(self):
